# Neutrino-DIS-Generator

./: CMakeLists.txt  README.md  neutrino.cc
cmake/: FindPythia8.cmake
config/: neutrino.cmnd
